# aoc

./: .gitignore  go.mod  newday.sh
01_rust/: Cargo.toml
02/: second.go
03/: test.py
04_01/: main.go
04_02/: main.go
06_01/: main.go
06_02/: main.go  main_test.go
07_01/: main_test.go
08_01/: main_test.go
08_02/: main.go  main_test.go
09_01/: main.go  main_test.go
09_02/: main.go  main_test.go
10_01/: main_test.go
10_02/: main.go
11_01/: main.go  main_test.go
12_01/: main.go  main_test.go
12_02/: main.go  main.py
14_01/: main.go  main_test.go
15_01/: main.go  main_test.go
15_02/: main_test.go
2020/01/: main.go
2020/02/: main.go
2020/03/: main.go  second.go
2020/05_01/: main.go  main_test.go
2020/05_02/: main.go
2020/06_01/: main_test.go
2020/07_01/: main.go  main.py  t.txt
2020/08_01/: main.go
2020/10_01/: main.go
2020/11_02/: main.go  main.py  main_test.go
2020/12_02/: main_test.go
2020/14_02/: main.go  main_test.go
2020/15_02/: main.go
2020/16_01/: main.go
2020/16_02/: main.go  main_test.go
2020/18_01/: main.go  main.py  main_test.go
2020/testDir/: main.py  tinput2.txt
2021/template/: main.go
2023/day_01/: Cargo.toml
2023/day_02/: Cargo.toml
2023/day_03/: Cargo.toml
2023/day_04/: Cargo.toml
2023/day_05/: Cargo.toml
2023/day_06/: Cargo.toml
2024/01/: main.go  main_test.go
2024/02/: main.go  main_test.go
2024/03/: main.go  main_test.go
2024/04/: main.go  main_test.go
2024/05/: main.go  main_test.go
2024/06/: main.go  (+1 more)
template/: main.go  main_test.go
testDir/: main.go
(+103 files in other folders)
