[package]
name = "first"
version = "0.1.0"
authors = ["Joonas Lehtimäki <joonas.lehtimaki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "part1"
path = "src/part1.rs"

[[bin]]
name = "part2"
path = "src/part2.rs"